添加错误码返回